# UCN-Taller-EDATOS-2021-1

./: CMakeLists.txt  main.cpp
backup/: BinarySearchTree.cpp  BinarySearchTree.hpp  BinarySearchTreeNode.hpp  main.cpp  mainTest.cpp
docs/: BITACORA.md  README.md
include/: BinarySearchTree.hpp  BinarySearchTreeNode.hpp  FaceDetector.hpp  ImageCoding.hpp
src/: BinarySearchTree.cpp  FaceDetector.cpp  ImageCoding.cpp
videos/: README.md
